--- a/aboutus.html
+++ b/aboutus.html
@@ -69,20 +69,25 @@
 					<div class="container">						
 						<div class="row">
 							<div class="col-md-4">
+								<br>
 								<img src="assets/images/12_grid_1.jpg" class="img-responsive img-text" alt="Responsive image"/>
 							</div>
 							<div class="col-md-8">
-								<h2 style="text-align: center">Susan Pedraza</h2>
+								<br>
+								<h2 style="text-align: center" style="color:white;">Susan Pedraza</h2>
 								<p class="image-text-text" style="text-align: justify">Lorem Ipsum available, but the majority have suffered This alteration in some form, by injected is a humour, or randomised words which don’t look even sligh is made  believable. If  to use and yammi passage of Lorem Ipsum, you need to be sure there isn’t by pioneer designer anything embarrassing hidden in the middle of text.<br><br>
 								Lorem Ipsum available, but the majority have suffered This alteration in some form, by injected is a humour, or randomised words which don’t look even sligh is made  believable. If  to use and yammi passage of Lorem Ipsum, you need to be sure there isn’t by pioneer designer anything embarrassing hidden in the middle of text.</p>	
 							</div>
 						</div>												
 						<div class="row">
 							<div class="col-md-4 col-md-push-8">
+								<br>
 								<img src="assets/images/13_grid_2.jpg" class="img-responsive img-text" alt="Responsive image"/>
 							</div>
 							<div class="col-md-8 col-md-pull-4">
-								<p class="image-text-text">Lorem Ipsum available, but the majority have suffered This alteration in some form, by injected is a humour, or randomised words which don’t look even sligh is made  believable. If  to use and yammi passage of Lorem Ipsum, you need to be sure there isn’t by pioneer designer anything embarrassing hidden in the middle of text.<br><br>
+								<br>
+								<h2 style="text-align: center" style="color:white;">Mauricio Gallardo</h2>
+								<p class="image-text-text" style="text-align: justify">Lorem Ipsum available, but the majority have suffered This alteration in some form, by injected is a humour, or randomised words which don’t look even sligh is made  believable. If  to use and yammi passage of Lorem Ipsum, you need to be sure there isn’t by pioneer designer anything embarrassing hidden in the middle of text.<br><br>
 								Lorem Ipsum available, but the majority have suffered This alteration in some form, by injected is a humour, or randomised words which don’t look even sligh is made  believable. If  to use and yammi passage of Lorem Ipsum, you need to be sure there isn’t by pioneer designer anything embarrassing hidden in the middle of text.</p>	
 							</div>
 						</div>						
@@ -92,19 +97,25 @@
 					<div class="container">						
 						<div class="row">
 							<div class="col-md-4">
+								<br>
 								<img src="assets/images/12_grid_1.jpg" class="img-responsive img-text" alt="Responsive image"/>
 							</div>
 							<div class="col-md-8">
-								<p class="image-text-text">Lorem Ipsum available, but the majority have suffered This alteration in some form, by injected is a humour, or randomised words which don’t look even sligh is made  believable. If  to use and yammi passage of Lorem Ipsum, you need to be sure there isn’t by pioneer designer anything embarrassing hidden in the middle of text.<br><br>
+								<br>
+								<h2 style="text-align: center" style="color:white;">Pamela Castillo</h2>
+								<p class="image-text-text" style="text-align: justify">Lorem Ipsum available, but the majority have suffered This alteration in some form, by injected is a humour, or randomised words which don’t look even sligh is made  believable. If  to use and yammi passage of Lorem Ipsum, you need to be sure there isn’t by pioneer designer anything embarrassing hidden in the middle of text.<br><br>
 								Lorem Ipsum available, but the majority have suffered This alteration in some form, by injected is a humour, or randomised words which don’t look even sligh is made  believable. If  to use and yammi passage of Lorem Ipsum, you need to be sure there isn’t by pioneer designer anything embarrassing hidden in the middle of text.</p>	
 							</div>
 						</div>												
 						<div class="row">
 							<div class="col-md-4 col-md-push-8">
+								<br>
 								<img src="assets/images/13_grid_2.jpg" class="img-responsive img-text" alt="Responsive image"/>
 							</div>
 							<div class="col-md-8 col-md-pull-4">
-								<p class="image-text-text">Lorem Ipsum available, but the majority have suffered This alteration in some form, by injected is a humour, or randomised words which don’t look even sligh is made  believable. If  to use and yammi passage of Lorem Ipsum, you need to be sure there isn’t by pioneer designer anything embarrassing hidden in the middle of text.<br><br>
+								<br>
+								<h2 style="text-align: center" style="color:white;">Diego Pozo</h2>
+								<p class="image-text-text" style="text-align: justify">Lorem Ipsum available, but the majority have suffered This alteration in some form, by injected is a humour, or randomised words which don’t look even sligh is made  believable. If  to use and yammi passage of Lorem Ipsum, you need to be sure there isn’t by pioneer designer anything embarrassing hidden in the middle of text.<br><br>
 								Lorem Ipsum available, but the majority have suffered This alteration in some form, by injected is a humour, or randomised words which don’t look even sligh is made  believable. If  to use and yammi passage of Lorem Ipsum, you need to be sure there isn’t by pioneer designer anything embarrassing hidden in the middle of text.</p>	
 							</div>
 						</div>						
@@ -114,10 +125,13 @@
 					<div class="container">						
 						<div class="row">
 							<div class="col-md-4">
+								<br>
 								<img src="assets/images/12_grid_1.jpg" class="img-responsive img-text" alt="Responsive image"/>
 							</div>
 							<div class="col-md-8">
-								<p class="image-text-text">Lorem Ipsum available, but the majority have suffered This alteration in some form, by injected is a humour, or randomised words which don’t look even sligh is made  believable. If  to use and yammi passage of Lorem Ipsum, you need to be sure there isn’t by pioneer designer anything embarrassing hidden in the middle of text.<br><br>
+								<br>
+								<h2 style="text-align: center" style="color:white;">Guianela Gil</h2>
+								<p class="image-text-text" style="text-align: justify">Lorem Ipsum available, but the majority have suffered This alteration in some form, by injected is a humour, or randomised words which don’t look even sligh is made  believable. If  to use and yammi passage of Lorem Ipsum, you need to be sure there isn’t by pioneer designer anything embarrassing hidden in the middle of text.<br><br>
 								Lorem Ipsum available, but the majority have suffered This alteration in some form, by injected is a humour, or randomised words which don’t look even sligh is made  believable. If  to use and yammi passage of Lorem Ipsum, you need to be sure there isn’t by pioneer designer anything embarrassing hidden in the middle of text.</p>	
 							</div>
 						</div>																		
