--- a/aboutus.html
+++ b/aboutus.html
@@ -77,7 +77,7 @@
 								<h2 style="text-align: center" style="color:white;">Susan Pedraza</h2>
 								<p class="image-text-text" style="text-align: justify">Lorem Ipsum available, but the majority have suffered This alteration in some form, by injected is a humour, or randomised words which don’t look even sligh is made  believable. If  to use and yammi passage of Lorem Ipsum, you need to be sure there isn’t by pioneer designer anything embarrassing hidden in the middle of text.<br><br>
 								Lorem Ipsum available, but the majority have suffered This alteration in some form, by injected is a humour, or randomised words which don’t look even sligh is made  believable. If  to use and yammi passage of Lorem Ipsum, you need to be sure there isn’t by pioneer designer anything embarrassing hidden in the middle of text.</p>	
-								<br><a href="#" class="btn btn-learn-more">Contáctala<i class="ion-ios-arrow-right"></i></a>
+								<br><a href="#" class="btn btn-learn-more" style="color:white;">Contáctala<i class="ion-ios-arrow-right"></i></a>
 							</div>
 						</div>												
 						<div class="row">
@@ -90,6 +90,7 @@
 								<h2 style="text-align: center" style="color:white;">Mauricio Gallardo</h2>
 								<p class="image-text-text" style="text-align: justify">Lorem Ipsum available, but the majority have suffered This alteration in some form, by injected is a humour, or randomised words which don’t look even sligh is made  believable. If  to use and yammi passage of Lorem Ipsum, you need to be sure there isn’t by pioneer designer anything embarrassing hidden in the middle of text.<br><br>
 								Lorem Ipsum available, but the majority have suffered This alteration in some form, by injected is a humour, or randomised words which don’t look even sligh is made  believable. If  to use and yammi passage of Lorem Ipsum, you need to be sure there isn’t by pioneer designer anything embarrassing hidden in the middle of text.</p>	
+								<br><a href="#" class="btn btn-learn-more" style="color:white;">Contáctalo<i class="ion-ios-arrow-right"></i></a>
 							</div>
 						</div>						
 					</div>
@@ -106,6 +107,7 @@
 								<h2 style="text-align: center" style="color:white;">Pamela Castillo</h2>
 								<p class="image-text-text" style="text-align: justify">Lorem Ipsum available, but the majority have suffered This alteration in some form, by injected is a humour, or randomised words which don’t look even sligh is made  believable. If  to use and yammi passage of Lorem Ipsum, you need to be sure there isn’t by pioneer designer anything embarrassing hidden in the middle of text.<br><br>
 								Lorem Ipsum available, but the majority have suffered This alteration in some form, by injected is a humour, or randomised words which don’t look even sligh is made  believable. If  to use and yammi passage of Lorem Ipsum, you need to be sure there isn’t by pioneer designer anything embarrassing hidden in the middle of text.</p>	
+								<br><a href="#" class="btn btn-learn-more" style="color:white;">Contáctala<i class="ion-ios-arrow-right"></i></a>
 							</div>
 						</div>												
 						<div class="row">
@@ -118,6 +120,7 @@
 								<h2 style="text-align: center" style="color:white;">Diego Pozo</h2>
 								<p class="image-text-text" style="text-align: justify">Lorem Ipsum available, but the majority have suffered This alteration in some form, by injected is a humour, or randomised words which don’t look even sligh is made  believable. If  to use and yammi passage of Lorem Ipsum, you need to be sure there isn’t by pioneer designer anything embarrassing hidden in the middle of text.<br><br>
 								Lorem Ipsum available, but the majority have suffered This alteration in some form, by injected is a humour, or randomised words which don’t look even sligh is made  believable. If  to use and yammi passage of Lorem Ipsum, you need to be sure there isn’t by pioneer designer anything embarrassing hidden in the middle of text.</p>	
+								<br><a href="#" class="btn btn-learn-more" style="color:white;">Contáctalo<i class="ion-ios-arrow-right"></i></a>
 							</div>
 						</div>						
 					</div>
@@ -131,9 +134,10 @@
 							</div>
 							<div class="col-md-8">
 								<br>
-								<h2 style="text-align: center" style="color:white;">Guianela Gil</h2>
+								<h2 style="text-align: center,color:white;">Guianela Gil</h2>
 								<p class="image-text-text" style="text-align: justify">Lorem Ipsum available, but the majority have suffered This alteration in some form, by injected is a humour, or randomised words which don’t look even sligh is made  believable. If  to use and yammi passage of Lorem Ipsum, you need to be sure there isn’t by pioneer designer anything embarrassing hidden in the middle of text.<br><br>
 								Lorem Ipsum available, but the majority have suffered This alteration in some form, by injected is a humour, or randomised words which don’t look even sligh is made  believable. If  to use and yammi passage of Lorem Ipsum, you need to be sure there isn’t by pioneer designer anything embarrassing hidden in the middle of text.</p>	
+								<br><a href="#" class="btn btn-learn-more" style="color:white;">Contáctala<i class="ion-ios-arrow-right"></i></a>
 							</div>
 						</div>																		
 					</div>
