--- a/aboutus.html
+++ b/aboutus.html
@@ -74,10 +74,10 @@
 							</div>
 							<div class="col-md-8">
 								<br>
-								<h2 style="text-align: center" style="color:white;">Susan Pedraza</h2>
+								<h2 align="center" style="color:white;">Susan Pedraza</h2>
 								<p class="image-text-text" style="text-align: justify">Lorem Ipsum available, but the majority have suffered This alteration in some form, by injected is a humour, or randomised words which don’t look even sligh is made  believable. If  to use and yammi passage of Lorem Ipsum, you need to be sure there isn’t by pioneer designer anything embarrassing hidden in the middle of text.<br><br>
 								Lorem Ipsum available, but the majority have suffered This alteration in some form, by injected is a humour, or randomised words which don’t look even sligh is made  believable. If  to use and yammi passage of Lorem Ipsum, you need to be sure there isn’t by pioneer designer anything embarrassing hidden in the middle of text.</p>	
-								<br><a href="#" class="btn btn-learn-more" style="color:white;">Contáctala<i class="ion-ios-arrow-right"></i></a>
+								<br><a href="https://wa.me/51926901701?text=Hola,%20quiero%20informaci%C3%B3n%20sobre%20los%20*Voluntariados%20Globales*" class="btn btn-learn-more">Contáctala<i class="ion-ios-arrow-right"></i></a>
 							</div>
 						</div>												
 						<div class="row">
@@ -87,10 +87,10 @@
 							</div>
 							<div class="col-md-8 col-md-pull-4">
 								<br>
-								<h2 style="text-align: center" style="color:white;">Mauricio Gallardo</h2>
+								<h2 align="center" style="color:white;">Mauricio Gallardo</h2>
 								<p class="image-text-text" style="text-align: justify">Lorem Ipsum available, but the majority have suffered This alteration in some form, by injected is a humour, or randomised words which don’t look even sligh is made  believable. If  to use and yammi passage of Lorem Ipsum, you need to be sure there isn’t by pioneer designer anything embarrassing hidden in the middle of text.<br><br>
 								Lorem Ipsum available, but the majority have suffered This alteration in some form, by injected is a humour, or randomised words which don’t look even sligh is made  believable. If  to use and yammi passage of Lorem Ipsum, you need to be sure there isn’t by pioneer designer anything embarrassing hidden in the middle of text.</p>	
-								<br><a href="#" class="btn btn-learn-more" style="color:white;">Contáctalo<i class="ion-ios-arrow-right"></i></a>
+								<br><a href="https://wa.me/51989265615?text=Hola,%20quiero%20informaci%C3%B3n%20sobre%20los%20*Voluntariados%20Globales*" class="btn btn-learn-more">Contáctalo<i class="ion-ios-arrow-right"></i></a>
 							</div>
 						</div>						
 					</div>
@@ -104,10 +104,10 @@
 							</div>
 							<div class="col-md-8">
 								<br>
-								<h2 style="text-align: center" style="color:white;">Pamela Castillo</h2>
+								<h2 align="center" style="color:white;">Pamela Castillo</h2>
 								<p class="image-text-text" style="text-align: justify">Lorem Ipsum available, but the majority have suffered This alteration in some form, by injected is a humour, or randomised words which don’t look even sligh is made  believable. If  to use and yammi passage of Lorem Ipsum, you need to be sure there isn’t by pioneer designer anything embarrassing hidden in the middle of text.<br><br>
 								Lorem Ipsum available, but the majority have suffered This alteration in some form, by injected is a humour, or randomised words which don’t look even sligh is made  believable. If  to use and yammi passage of Lorem Ipsum, you need to be sure there isn’t by pioneer designer anything embarrassing hidden in the middle of text.</p>	
-								<br><a href="#" class="btn btn-learn-more" style="color:white;">Contáctala<i class="ion-ios-arrow-right"></i></a>
+								<br><a href="https://wa.me/51918028285?text=Hola,%20quiero%20informaci%C3%B3n%20sobre%20los%20*Voluntariados%20Globales*" class="btn btn-learn-more">Contáctala<i class="ion-ios-arrow-right"></i></a>
 							</div>
 						</div>												
 						<div class="row">
@@ -117,10 +117,10 @@
 							</div>
 							<div class="col-md-8 col-md-pull-4">
 								<br>
-								<h2 style="text-align: center" style="color:white;">Diego Pozo</h2>
+								<h2 align="center" style="color:white;">Diego Pozo</h2>
 								<p class="image-text-text" style="text-align: justify">Lorem Ipsum available, but the majority have suffered This alteration in some form, by injected is a humour, or randomised words which don’t look even sligh is made  believable. If  to use and yammi passage of Lorem Ipsum, you need to be sure there isn’t by pioneer designer anything embarrassing hidden in the middle of text.<br><br>
 								Lorem Ipsum available, but the majority have suffered This alteration in some form, by injected is a humour, or randomised words which don’t look even sligh is made  believable. If  to use and yammi passage of Lorem Ipsum, you need to be sure there isn’t by pioneer designer anything embarrassing hidden in the middle of text.</p>	
-								<br><a href="#" class="btn btn-learn-more" style="color:white;">Contáctalo<i class="ion-ios-arrow-right"></i></a>
+								<br><a href="https://wa.me/51948496867?text=Hola,%20quiero%20informaci%C3%B3n%20sobre%20los%20*Voluntariados%20Globales*" class="btn btn-learn-more">Contáctalo<i class="ion-ios-arrow-right"></i></a>
 							</div>
 						</div>						
 					</div>
@@ -134,10 +134,10 @@
 							</div>
 							<div class="col-md-8">
 								<br>
-								<h2 style="text-align: center,color:white;">Guianela Gil</h2>
+								<h2 align="center" style="color:white;">Guianela Gil</h2>
 								<p class="image-text-text" style="text-align: justify">Lorem Ipsum available, but the majority have suffered This alteration in some form, by injected is a humour, or randomised words which don’t look even sligh is made  believable. If  to use and yammi passage of Lorem Ipsum, you need to be sure there isn’t by pioneer designer anything embarrassing hidden in the middle of text.<br><br>
 								Lorem Ipsum available, but the majority have suffered This alteration in some form, by injected is a humour, or randomised words which don’t look even sligh is made  believable. If  to use and yammi passage of Lorem Ipsum, you need to be sure there isn’t by pioneer designer anything embarrassing hidden in the middle of text.</p>	
-								<br><a href="#" class="btn btn-learn-more" style="color:white;">Contáctala<i class="ion-ios-arrow-right"></i></a>
+								<br><a href="https://wa.me/51993181576?text=Hola,%20quiero%20informaci%C3%B3n%20sobre%20los%20*Voluntariados%20Globales*" class="btn btn-learn-more">Contáctala<i class="ion-ios-arrow-right"></i></a>
 							</div>
 						</div>																		
 					</div>
