--- a/aboutus.html
+++ b/aboutus.html
@@ -96,6 +96,7 @@
 						</div>						
 					</div>
 				</section>
+				<hr style="border-color:white;">
 				<section class="image-text">
 					<div class="container">						
 						<div class="row">
@@ -110,7 +111,8 @@
 								Lorem Ipsum available, but the majority have suffered This alteration in some form, by injected is a humour, or randomised words which don’t look even sligh is made  believable. If  to use and yammi passage of Lorem Ipsum, you need to be sure there isn’t by pioneer designer anything embarrassing hidden in the middle of text.</p>	
 								<br><a href="https://wa.me/51918028285?text=Hola,%20quiero%20informaci%C3%B3n%20sobre%20los%20*Voluntariados%20Globales*" class="btn btn-learn-more">Contáctala<i class="ion-ios-arrow-right"></i></a>
 							</div>
-						</div>												
+						</div>
+						<hr style="border-color:white;">
 						<div class="row">
 							<div class="col-md-4 col-md-push-8">
 								<br>
@@ -126,6 +128,7 @@
 						</div>						
 					</div>
 				</section>
+				<hr style="border-color:white;">
 				<section class="image-text">
 					<div class="container">						
 						<div class="row">
