--- a/aboutus.html
+++ b/aboutus.html
@@ -84,7 +84,7 @@
 						<div class="row">
 							<div class="col-md-4 col-md-push-8">
 								<br>
-								<img src="assets/images/13_grid_2.jpg" class="img-responsive img-text" alt="Responsive image"/>
+								<img src="assets/images/fotomau.jpg" class="img-responsive img-text" alt="Responsive image"/>
 							</div>
 							<div class="col-md-8 col-md-pull-4">
 								<br>
