--- a/index2.html
+++ b/index2.html
@@ -141,7 +141,7 @@
                         </div>
                         <div class="col-md-6">
                             <div class="four-features four-features-right-bottom">
-                                <img src="assets/images/08.jpg" alt="Responsive image" class="img-responsive">
+                                <img src="assets/images/08.jpg" width="481px" height="678px" alt="Responsive image" class="img-responsive">
                                 <div class="features-content">
                                     <h3 style="color:white;">Mauricio Gallardo</h3>
                                     <p style="color:white;">
