--- a/aboutus2.html
+++ b/aboutus2.html
@@ -85,7 +85,7 @@
 						<div class="row">
 							<div class="col-md-4 col-md-push-8">
 								<br>
-								<img src="assets/images/fotomau1.jpg" width="481px" height="678px" class="img-responsive img-text" alt="Responsive image"/>
+								<img src="assets/images/fotomau1.jpg" width="481" height="678" class="img-responsive img-text" alt="Responsive image"/>
 							</div>
 							<div class="col-md-8 col-md-pull-4">
 								<br>
