--- a/aboutus.html
+++ b/aboutus.html
@@ -111,7 +111,7 @@
 							<div class="col-md-8">
 								<br>
 								<h2 align="center" style="color:white;">Pamela Castillo</h2>
-								<p class="image-text-text" style="text-align: justify">"Construyo la mejor versión de mí, mi propio camino, auténtico y único". Soy Pamela Castillo, representante de Intercambios Sociales Salientes y gestora de AIESEC en el comité de la Pontificia Universidad Católica del Perú. Actualmente, estudio Antropología en la universidad PUCP y mis pasatiempos favoritos son: disfrutar de una tarde de películas o series, conocer nuevos lugares y practicar nuevas actividades, tanto deportivas, artísticas, como académicas. <br><br>Resalto mis habilidades comunicativas como una fuente principal para alcanzar nuevos objetivos, así como de afrontar nuevos retos. Las diversas problemáticas sociales en las que me he encontrado inmersa, han despertado mi interés por conocer nuevas realidades culturales y contribuir en el desarrollo personal de mi entorno social. La imaginación es mi herramienta motivadora para despertarme cada día, pensar, reflexionar y ejecutar."<br><br>
+								<p class="image-text-text" style="text-align: justify">"Construyo la mejor versión de mí, mi propio camino, auténtico y único". Soy Pamela Castillo, representante de Intercambios Sociales Salientes y gestora de AIESEC en el comité de la Pontificia Universidad Católica del Perú. Actualmente, estudio Antropología en la universidad PUCP y mis pasatiempos favoritos son: disfrutar de una tarde de películas o series, conocer nuevos lugares y practicar nuevas actividades, tanto deportivas, artísticas, como académicas. <br><br>Resalto mis habilidades comunicativas como una fuente principal para alcanzar nuevos objetivos, así como de afrontar nuevos retos. Las diversas problemáticas sociales en las que me he encontrado inmersa, han despertado mi interés por conocer nuevas realidades culturales y contribuir en el desarrollo personal de mi entorno social. La imaginación es mi herramienta motivadora para despertarme cada día, pensar, reflexionar y ejecutar.<br><br>
 								</p>	
 								<br><a href="https://wa.me/51918028285?text=Hola,%20quiero%20informaci%C3%B3n%20sobre%20los%20*Voluntariados%20Globales*" class="btn btn-learn-more">Contáctala<i class="ion-ios-arrow-right"></i></a>
 							</div>
@@ -120,13 +120,14 @@
 						<div class="row">
 							<div class="col-md-4 col-md-push-8">
 								<br>
-								<img src="assets/images/13_grid_2.jpg" class="img-responsive img-text" alt="Responsive image"/>
+								<img src="assets/images/fotodiego.jpeg" class="img-responsive img-text" alt="Responsive image"/>
 							</div>
 							<div class="col-md-8 col-md-pull-4">
 								<br>
 								<h2 align="center" style="color:white;">Diego Pozo</h2>
-								<p class="image-text-text" style="text-align: justify">Lorem Ipsum available, but the majority have suffered This alteration in some form, by injected is a humour, or randomised words which don’t look even sligh is made  believable. If  to use and yammi passage of Lorem Ipsum, you need to be sure there isn’t by pioneer designer anything embarrassing hidden in the middle of text.<br><br>
-								Lorem Ipsum available, but the majority have suffered This alteration in some form, by injected is a humour, or randomised words which don’t look even sligh is made  believable. If  to use and yammi passage of Lorem Ipsum, you need to be sure there isn’t by pioneer designer anything embarrassing hidden in the middle of text.</p>	
+								<p class="image-text-text" style="text-align: justify">"It's not what the world holds for you, it is what you bring to it". Soy Diego Pozo, representante de Intercambios Sociales Salientes y gestor de AIESEC en el comité de la Pontificia Universidad Católica del Perú. Actualmente, estudio Derecho en la Pontificia Universidad Católica del Perú. Mis hobbies son ver series o películas, salir a pasear con amigos, hacer deporte, cocinar y me encanta ir a la playa.<br><br>
+								Me considero una persona consciente y comprometida, generador de cambios frente a la realidad social en la que todos somos partícipes y por la cual todas y todos cumplimos un rol sumamente importante. Es así que, constantemente me encuentro desarrollando habilidades blandas, manteniendo un pensamiento crítico sobre la situación actual, teniendo en cuenta que las adversidades y/o problemáticas han estado y seguirán siendo parte del mundo en el que vivimos. Por ello, es importante buscar las herramientas necesarias para hacer la diferencia desde el lugar donde nos encontrmos y ser un gestor de cambios sociales.<br><br>
+								</p>	
 								<br><a href="https://wa.me/51948496867?text=Hola,%20quiero%20informaci%C3%B3n%20sobre%20los%20*Voluntariados%20Globales*" class="btn btn-learn-more">Contáctalo<i class="ion-ios-arrow-right"></i></a>
 							</div>
 						</div>						
