--- a/aboutus.html
+++ b/aboutus.html
@@ -73,13 +73,12 @@
 						<div class="row">
 							<div class="col-md-4">
 								<br>
-								<img src="assets/images/12_grid_1.jpg" class="img-responsive img-text" alt="Responsive image"/>
+								<img src="assets/images/fotosusan.jpeg" class="img-responsive img-text" alt="Responsive image"/>
 							</div>
 							<div class="col-md-8">
 								<br>
 								<h2 align="center" style="color:white;">Susan Pedraza</h2>
-								<p class="image-text-text" style="text-align: justify">Lorem Ipsum available, but the majority have suffered This alteration in some form, by injected is a humour, or randomised words which don’t look even sligh is made  believable. If  to use and yammi passage of Lorem Ipsum, you need to be sure there isn’t by pioneer designer anything embarrassing hidden in the middle of text.<br><br>
-								Lorem Ipsum available, but the majority have suffered This alteration in some form, by injected is a humour, or randomised words which don’t look even sligh is made  believable. If  to use and yammi passage of Lorem Ipsum, you need to be sure there isn’t by pioneer designer anything embarrassing hidden in the middle of text.</p>	
+								<p class="image-text-text" style="text-align: justify"> </p>	
 								<br><a href="https://wa.me/51926901701?text=Hola,%20quiero%20informaci%C3%B3n%20sobre%20los%20*Voluntariados%20Globales*" class="btn btn-learn-more">Contáctala<i class="ion-ios-arrow-right"></i></a>
 							</div>
 						</div>	
@@ -92,8 +91,9 @@
 							<div class="col-md-8 col-md-pull-4">
 								<br>
 								<h2 align="center" style="color:white;">Mauricio Gallardo</h2>
-								<p class="image-text-text" style="text-align: justify">Lorem Ipsum available, but the majority have suffered This alteration in some form, by injected is a humour, or randomised words which don’t look even sligh is made  believable. If  to use and yammi passage of Lorem Ipsum, you need to be sure there isn’t by pioneer designer anything embarrassing hidden in the middle of text.<br><br>
-								Lorem Ipsum available, but the majority have suffered This alteration in some form, by injected is a humour, or randomised words which don’t look even sligh is made  believable. If  to use and yammi passage of Lorem Ipsum, you need to be sure there isn’t by pioneer designer anything embarrassing hidden in the middle of text.</p>	
+								<p class="image-text-text" style="text-align: justify">"No deberían existir fronteras para el esfuerzo humano. Por muy dura que nos parezca la vida, mientras haya vida hay esperanza". Soy Mauricio Gallardo, representante de Intercambios Sociales Salientes y gestor de AIESEC en el comité de la Pontificia Universidad Católica del Perú. Actualmente, me encuentro cursando el cuarto ciclo de la carrera de Ingeniería Biomédica; planeo especializarme en las ramas de Biomecánica y Rehabilitación e Ingeniería Clínica. Tengo como pasatiempos jugar tenis de mesa, de campo y fútbol, ver películas y concursos de integrales, cabe resaltar que amo el Cálculo Integral. Asimismo, soy fanático de programar páginas web y aplicaciones.<br><br>
+									Una de las fortalezas que me distingue como persona es la persistencia y empeño que pongo en las actividades que realizo, ya que, en la medida de lo posible, trato siempre de dar todo de mí y comprometerme al 100%. Por otro lado, mis ganas de adquirir nuevos conocimientos incrementan día a día; sin embargo, no solo busco aumentar mis habilidades académicas, sino también humanísticas, comprometiéndome conmigo mismo y con las personas que me rodean a cambiar el mundo.<br><br>
+								</p>	
 								<br><a href="https://wa.me/51989265615?text=Hola,%20quiero%20informaci%C3%B3n%20sobre%20los%20*Voluntariados%20Globales*" class="btn btn-learn-more">Contáctalo<i class="ion-ios-arrow-right"></i></a>
 							</div>
 						</div>						
@@ -126,7 +126,7 @@
 								<br>
 								<h2 align="center" style="color:white;">Diego Pozo</h2>
 								<p class="image-text-text" style="text-align: justify">"It's not what the world holds for you, it is what you bring to it". Soy Diego Pozo, representante de Intercambios Sociales Salientes y gestor de AIESEC en el comité de la Pontificia Universidad Católica del Perú. Actualmente, estudio Derecho en la Pontificia Universidad Católica del Perú. Mis hobbies son ver series o películas, salir a pasear con amigos, hacer deporte, cocinar y me encanta ir a la playa.<br><br>
-								Me considero una persona consciente y comprometida, generador de cambios frente a la realidad social en la que todos somos partícipes y por la cual todas y todos cumplimos un rol sumamente importante. Es así que, constantemente me encuentro desarrollando habilidades blandas, manteniendo un pensamiento crítico sobre la situación actual, teniendo en cuenta que las adversidades y/o problemáticas han estado y seguirán siendo parte del mundo en el que vivimos. Por ello, es importante buscar las herramientas necesarias para hacer la diferencia desde el lugar donde nos encontrmos y ser un gestor de cambios sociales.<br><br>
+								Me considero una persona consciente y comprometida, generador de cambios frente a la realidad social en la que todos somos partícipes y por la cual todas y todos cumplimos un rol sumamente importante. Es así que, constantemente me encuentro desarrollando habilidades blandas, manteniendo un pensamiento crítico sobre la situación actual, teniendo en cuenta que las adversidades y/o problemáticas han estado y seguirán siendo parte del mundo en el que vivimos. Por ello, es importante buscar las herramientas necesarias para hacer la diferencia desde el lugar donde nos encontramos y ser un gestor de cambios sociales.<br><br>
 								</p>	
 								<br><a href="https://wa.me/51948496867?text=Hola,%20quiero%20informaci%C3%B3n%20sobre%20los%20*Voluntariados%20Globales*" class="btn btn-learn-more">Contáctalo<i class="ion-ios-arrow-right"></i></a>
 							</div>
