--- a/aboutus.html
+++ b/aboutus.html
@@ -140,13 +140,13 @@
 							<hr style="border-color:white;">
 							<div class="col-md-4">
 								<br>
-								<img src="assets/images/12_grid_1.jpg" class="img-responsive img-text" alt="Responsive image"/>
+								<img src="assets/images/fotoguiane.jpeg" class="img-responsive img-text" alt="Responsive image"/>
 							</div>
 							<div class="col-md-8">
 								<br>
 								<h2 align="center" style="color:white;">Guianela Gil</h2>
-								<p class="image-text-text" style="text-align: justify">Lorem Ipsum available, but the majority have suffered This alteration in some form, by injected is a humour, or randomised words which don’t look even sligh is made  believable. If  to use and yammi passage of Lorem Ipsum, you need to be sure there isn’t by pioneer designer anything embarrassing hidden in the middle of text.<br><br>
-								Lorem Ipsum available, but the majority have suffered This alteration in some form, by injected is a humour, or randomised words which don’t look even sligh is made  believable. If  to use and yammi passage of Lorem Ipsum, you need to be sure there isn’t by pioneer designer anything embarrassing hidden in the middle of text.</p>	
+								<p class="image-text-text" style="text-align: justify">"Make it happen". Soy Guianela Gil, representante de Intercambios Sociales Salientes y gestora de AIESEC en el comité de la Pontificia Universidad Católica del Perú.  Actualmente, estudio Contabilidad en la PUCP. Mis hobbies son ver series o películas. Me encanta pasar tiempo con mis amigos. Me fascina descubrir cosas nuevas y filosofar de cualquier tema en nuestro alrededor.<br><br>
+								Me considero una persona muy resiliente, comprometida, eficaz, flexible. Destaco mis habilidades blandas como base para sobresalir y alcanzar las distintas metas que quiero realizar con un sistema de organización en mi vida. Sin embargo, analizo mis defectos para poder mejorar como persona y ser proactiva en los distintos ámbitos tanto en mi vida como en la sociedad, ya que considero importante, ser un agente de cambio y poder contribuir con un granito de arena en el mundo. Aun siendo mínimo, se hace la diferencia.<br><br></p>	
 								<br><a href="https://wa.me/51993181576?text=Hola,%20quiero%20informaci%C3%B3n%20sobre%20los%20*Voluntariados%20Globales*" class="btn btn-learn-more">Contáctala<i class="ion-ios-arrow-right"></i></a><br>br><br>br>
 							</div>
 						</div>																		
